remove get user by id
And organize api docs
